  additional improvements to keep hash and size in line with attached product.

* Improved (re)setting metadata state after storage failure for attach, pull,
  and ingest.

* Removed muninn-update post_ingest and post_pull commands since these were no
  longer working with generic hooks and the S3/Swift storage backends.

* Fixed issue in zip auto-extraction for muninn-pull.

* Run hooks after core.active is set to True (regression introduced in 5.4).

5.4 2022-02-22
~~~~~~~~~~~~~~

* Added muninn-attach/archive.attach() which acts as the inverse of
  muninn-strip/archive.strip().

* Fixed grand_type -> grant_type keyword typo for oauth2 entries in auth_file.

* Allow explicit setting of region for S3 backend.

* Added (optional) 'paths' argument to plugin export methods.

* Fix pg8000 >= 1.22 compatibility issue with filtering on timestamps.

5.3 2021-12-06
~~~~~~~~~~~~~~

* Added verify-hash-download option to muninn-pull.

* Use Bi/Ki/Gi/... as unit for human readable sizes instead of K/G/...

* When using the S3/Swift backend, a post ingest/pull hook will now use a
  locally kept temporary version of the product (instead of retrieving it
  again from the bucket). The path(s) to the ingested/pulled product files
  is passed on using a new 'paths' argument. Old hook functions without this
  argument will still work, but will not be able to access the files.

* muninn-pull for http(s) now retrieves data in blocks instead of reading the
  whole file in memory.

* Fixed issue when trying to ingest empty files or directories into S3/Swift
  storage.

* Fix compatibility issue with pg8000 >= 1.22.

5.2.1 2021-06-25
~~~~~~~~~~~~~~~~

* Fixed issue where a force ingest on a catalogue-only archive would fail.

5.2 2021-06-22
~~~~~~~~~~~~~~

* Added generic hooking mechanism (not coupled to a product type).

* Added 'muninn-update retype' to allow correction of product_type values.

* Added 'day', 'hour', 'minute', 'second', and 'time' subscripts for